[package]
name = "lazy_static"
# NB: When modifying, also modify html_root_url in lib.rs
version = "1.4.0"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>"]
license = "MIT/Apache-2.0"

description = "A macro for declaring lazily evaluated statics in Rust."
readme = "README.md"
documentation = "https://docs.rs/lazy_static"

repository = "https://github.com/rust-lang-nursery/lazy-static.rs"
keywords = ["macro", "lazy", "static"]
categories = [ "no-std", "rust-patterns", "memory-management" ]
exclude = ["/.travis.yml", "/appveyor.yml"]

[dependencies]
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.2", optional = true }

[dependencies.spin]
git = "https://github.com/universal-secure-computing-community/crates-sgx.git"
tag = "v0.3.0+sgx1.1.2"
optional = true

[features]
default = ["mesalock_sgx"]
mesalock_sgx = [
  "sgx_tstd",
]
spin_no_std = ["spin"]

[dev-dependencies]
doc-comment = "0.3.1"

[badges]
appveyor = { repository = "rust-lang-nursery/lazy-static.rs" }
travis-ci = { repository = "rust-lang-nursery/lazy-static.rs" }

is-it-maintained-issue-resolution = { repository = "rust-lang-nursery/lazy-static.rs" }
is-it-maintained-open-issues = { repository = "rust-lang-nursery/lazy-static.rs" }

maintenance = { status = "passively-maintained" }
