[package]
name = "libflate"
version = "1.0.2"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A Rust implementation of DEFLATE algorithm and related formats (ZLIB, GZIP)"
homepage = "https://github.com/sile/libflate"
repository = "https://github.com/sile/libflate"
readme = "README.md"
keywords = ["deflate", "gzip", "zlib"]
categories = ["compression"]
license = "MIT"
edition = "2018"

[badges]
coveralls = {repository = "sile/libflate"}


[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
enclave_unit_test = ["crates_unittest", "inventory"]
[dependencies]
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git", tag = "v1.1.2", optional = true, features = ["untrusted_time"] }
adler32 = { git = "https://github.com/universal-secure-computing-community/crates-sgx.git", tag = "v0.3.1+sgx1.1.2" }
crc32fast = {path = "../rust-crc32fast"}
libflate_lz77 = { path = "libflate_lz77", version = "1" }
rle-decode-fast = { path = "../rle-decode-helper"}
crates_unittest = { git = "https://github.com/Zha0Chan/crates-sgx-unittest.git", optional = true, default-features = false }
inventory = { version = "0.1.6", optional = true }

[dev-dependencies]
clap = "2"

[workspace]
members = ["libflate_lz77"]
exclude = ["sgx-tests"]