[package]
name = "matchers"
version = "0.0.1"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hawkw/matchers"
homepage = "https://github.com/hawkw/matchers"
documentation = "https://docs.rs/matchers/"
description = """
Regex matching on character and byte streams.
"""
categories = ["text-processing"]
keywords = ["regex", "match", "pattern", "streaming"]

[badges]
azure-devops = { project = "eliza0132/eliza", pipeline = "hawkw.matchers", build = "1" }
maintenance = { status = "experimental" }

[dependencies]
regex-automata = "0.1"
